# SocketPractice

./: CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  app1.cpp  server1.cpp  socket_win.cpp  socket_win.h
lib/: CMakeLists.txt  socket_win.cpp  socket_win.h
